<resources>
    <string name="app_name">App Bixi</string>
    <string name="title_activity_main">App Bixi</string>

    <string name="docks_button">Locate</string>
    <string name="docks_list_button">Show as list</string>
    <string name="docks_tooltip">Enter address here</string>

    <string name="bixi_button">Locate</string>
    <string name="bixi_list_button">Show as list</string>
    <string name="bixi_tooltip">Enter address here</string>

    <string name="itinerary_tab">ITIN</string>
    <string name="itinerary_button">Draw</string>
    <string name="start_tooltip">Enter starting position here</string>
    <string name="dest_tooltip">Enter destination here</string>

    <string name="mapskey">AIzaSyDehX119pWoj_Vl75sSFLKAcM150q4wVb8</string>

</resources>
