<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/starttextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/start_tooltip" />

    <EditText
        android:id="@+id/desttextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/dest_tooltip" />

    <ImageButton
        android:id="@+id/itinerarybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/itinerary_button"
        app:srcCompat="@drawable/ic_search_black_24px" />

    <fragment
        android:id="@+id/itinerarymapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:apiKey = "@string/mapskey"
        android:clickable = "true"
        tools:context="com.example.francoisluc.ift2905_projet.MainActivity" />

</LinearLayout>