<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dockslocationtextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPostalAddress"
            android:hint="@string/docks_tooltip" />

        <ImageButton
            android:id="@+id/docksbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/docks_button"
            app:srcCompat="@drawable/ic_search_black_24px" />

        <ImageButton
            android:id="@+id/dockslistbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/docks_list_button"
            app:srcCompat="@drawable/ic_list_black_24px" />

    </LinearLayout>

    <fragment
        android:id="@+id/docksmapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:apiKey = "@string/mapskey"
        android:clickable = "true"
        tools:context="com.example.francoisluc.ift2905_projet.MainActivity" />

    <ListView
        android:id="@+id/dockslistView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />
</LinearLayout>